--- a/translation/es.json
+++ b/translation/es.json
@@ -5,5 +5,6 @@
     "Sample Localization Page": "Página de localización de ejemplo",
     "Sample Page Document": "Ejemplo de documento de página",
     "Sample Page Subtitle": "Ejemplo de subtítulo de página",
-    "Sample paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vestibulum mollis metus non porttitor. Etiam molestie tincidunt ipsum, vitae pulvinar urna malesuada non.": "Ejemplo de párrafo: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mollis metus non porttitor, Etiam molestie tincidunt ipsum, vitae pulvinar urna malesuada non."
+    "Sample paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vestibulum mollis metus non porttitor. Etiam molestie tincidunt ipsum, vitae pulvinar urna malesuada non.": "Ejemplo de párrafo: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mollis metus non porttitor, Etiam molestie tincidunt ipsum, vitae pulvinar urna malesuada non.",
+    "Potential placeholder": "NEW NEW NEW"
 }
